--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Future Color</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-        <link href="/assets/css/style.css" rel="stylesheet" />
+        <link href="/css/style.css" rel="stylesheet" />
     </head>
 
     <body>
@@ -142,7 +142,7 @@
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <script type="module" src="main.js"></script>
-        <script type="module" src="/utils/dragAndDrop.js"></script>
+        <script type="module" src="/js/main.js"></script>
+        <script type="module" src="/js/dragAndDrop.js"></script>
     </body>
 </html>
